LG-601 Allow a user to add a new webauthn configuration
**Why**: So we can support strong authentication via hardware security keys as a new 2FA option

**How**: Generate a challenge on the server side.   Use the Credential Manager API (navigator.credentials.create) to ask the browser to generate a new credential.  After obtaining user consent, get the public_key and signed attestation and forward it to the server along with a name supplied by the user.  Use the webauthn gem to verify the credentials.  Upon success, store the credential id, public_key, and name in the db as a new webauthn_configuration.

--- a/config/locales/account/en.yml
+++ b/config/locales/account/en.yml
@@ -25,6 +25,7 @@ en:
         instructions: Your account requires a secret code to be verified.
         reactivate_button: Enter the code you received via US mail
         success: Your account has been verified.
+      webauthn: Hardware security key
     items:
       delete_your_account: Delete your account
       personal_key: Personal key
