--- a/config/locales/headings/es.yml
+++ b/config/locales/headings/es.yml
@@ -54,3 +54,5 @@ es:
     totp_setup:
       new: Permita una app de autenticación
     verify_email: Revise su email
+    webauthn_setup:
+      new: Registre su clave de seguridad de hardware
