--- a/config/locales/account/es.yml
+++ b/config/locales/account/es.yml
@@ -25,6 +25,7 @@ es:
         instructions: Su cuenta requiere que un código secreto sea verificado.
         reactivate_button: Ingrese el código que recibió por correo postal.
         success: Su cuenta ha sido verificada.
+      webauthn: Clave de seguridad de hardware
     items:
       delete_your_account: Eliminar su cuenta
       personal_key: Clave personal
