--- a/config/locales/errors/fr.yml
+++ b/config/locales/errors/fr.yml
@@ -47,3 +47,7 @@ fr:
       unauthorized_service_provider: Fournisseur de service non autorisé
       usps_otp_expired: NOT TRANSLATED YET
       weak_password: Votre mot de passe n'est pas assez fort. %{feedback}
+    webauthn_setup:
+      general_error: Une erreur s'est produite lors de l'ajout de votre clé de sécurité
+        matérielle. Veuillez réessayer.
+      unique_name: Ce nom est déjà pris. Veuillez choisir un autre nom.
