--- a/config/locales/forms/en.yml
+++ b/config/locales/forms/en.yml
@@ -84,3 +84,9 @@ en:
       name: Confirmation code
       submit: Confirm account
       title: Confirm your account
+    webauthn_setup:
+      intro_html: When you sign in, you can use your hardware security key. %{link}
+      step_1: Insert your Security Key in your computer's USB port or connect it with
+        a USB cable.
+      step_2: Once connected, tap the button or gold disk if your key has one of them.
+      step_3: Enter a name for your security key
