--- a/config/locales/links/en.yml
+++ b/config/locales/links/en.yml
@@ -26,3 +26,4 @@ en:
       app_option: Use an authentication application instead.
       get_another_code: Get another code
     what_is_totp: What is an authentication app?
+    what_is_webauthn: What is a hardware security key?
