--- a/config/locales/links/es.yml
+++ b/config/locales/links/es.yml
@@ -26,3 +26,4 @@ es:
       app_option: Use una aplicación de autenticación en su lugar.
       get_another_code: Obtener otro código
     what_is_totp: "¿Qué es una app de autenticación?"
+    what_is_webauthn: "¿Qué es una clave de seguridad de hardware?"
