--- a/config/locales/notices/en.yml
+++ b/config/locales/notices/en.yml
@@ -45,5 +45,6 @@ en:
     use_diff_email:
       link: use a different email address
       text_html: Or, %{link}
+    webauthn_added: You added a hardware security key.
   session_timedout: We signed you out. For your security, %{app} ends your session
     when you haven’t moved to a new page for %{minutes} minutes.
