LG-643 Add timeout to Twilio API calls
**Why**: It is a best practice — some might say a requirement — to add a
timeout to all network requests. Without a timeout, some requests could
tie up an app server for literally more than 15 minutes, as reported by
New Relic.

**How**:
- Define an `http_client` with a configurable timeout option and modify
the Twilio REST client to use this `http_client`
- Rescue the `Faraday::TimeoutError` in the Twilio service class, and
raise a custom Twilio error that the 2FA controller can process to
display a helpful message to the user and make it easier for them to try
again.

**How to test locally*:
- Run `bundle open twilio-ruby` to open the gem in your text editor
- In `lib/twilio-ruby/rest/api.rb` change the value of `@base_url` to
`'https://httpstat.us'`, and `@host` to `'httpstat.us'`
- In `lib/twilio-ruby/rest/api/v2010.rb`, change the value of `@version`
to an empty string
- In `lib/twilio-ruby/rest/api/v2010/account/message.rb`, on line 27,
change the value of `@uri` to `"/200"`. On line 120, replace the
`payload` with this:
```ruby
payload = @version.create(
              'GET',
              @uri,
              data: data,
              params: { sleep: '10000' }
          )
```
- Run `bundle list twilio-ruby` to get the path to the gem
- Copy the path of the gem and update the Gemfile to point to your local
gem: `gem 'twilio-ruby', path: [path_to_gem]`
- Run `bundle update twilio-ruby`
- In your local `application.yml`, set `telephony_disabled` to `'false'`
- Run `make run`
- Create an account and use your real phone number for 2FA (to minimize
the chances of spamming someone else's phone). You should see a flash
message saying the server took too long after you enter your phone
number.

--- a/config/locales/errors/en.yml
+++ b/config/locales/errors/en.yml
@@ -44,6 +44,7 @@ en:
       phone_unsupported: Sorry, we are unable to send SMS at this time. Please try
         the phone call option below, or use your personal key.
       twilio_inbound_sms_invalid: The inbound Twilio SMS message failed validation.
+      twilio_timeout: The server took too long to respond. Please try again.
       unauthorized_authn_context: Unauthorized authentication context
       unauthorized_nameid_format: Unauthorized nameID format
       unauthorized_service_provider: Unauthorized Service Provider
