--- a/config/locales/errors/es.yml
+++ b/config/locales/errors/es.yml
@@ -40,6 +40,7 @@ es:
       phone_unsupported: Lo sentimos, no podemos enviar SMS en este momento. Pruebe
         la opción de llamada telefónica a continuación o use su clave personal.
       twilio_inbound_sms_invalid: El mensaje de Twilio SMS de entrada falló la validación.
+      twilio_timeout: NOT TRANSLATED YET
       unauthorized_authn_context: Contexto de autenticación no autorizado
       unauthorized_nameid_format: NOT TRANSLATED YET
       unauthorized_service_provider: Proveedor de servicio no autorizado
