remove some periods

--- a/config/locales/devise/es.yml
+++ b/config/locales/devise/es.yml
@@ -130,10 +130,10 @@ es:
       two_factor_choice_options:
         auth_app: Aplicación de autenticación
         auth_app_info: Configure una aplicación de autenticación para obtener su código
-          de seguridad sin proporcionar un número de teléfono.
+          de seguridad sin proporcionar un número de teléfono
         piv_cac: Empleados del Gobierno
-        piv_cac_info: Use su tarjeta PIV / CAC para asegurar su cuenta.
+        piv_cac_info: Use su tarjeta PIV / CAC para asegurar su cuenta
         sms: Mensaje de texto / SMS
-        sms_info: Obtenga su código de seguridad a través de mensajes de texto / SMS.
+        sms_info: Obtenga su código de seguridad a través de mensajes de texto / SMS
         voice: Llamada telefónica
-        voice_info: Obtenga su código de seguridad a través de una llamada telefónica.
+        voice_info: Obtenga su código de seguridad a través de una llamada telefónica
