--- a/config/locales/devise/fr.yml
+++ b/config/locales/devise/fr.yml
@@ -137,10 +137,10 @@ fr:
       two_factor_choice_options:
         auth_app: Application d'authentification
         auth_app_info: Configurez une application d'authentification pour obtenir
-          votre code de sécurité sans fournir de numéro de téléphone.
+          votre code de sécurité sans fournir de numéro de téléphone
         piv_cac: Employés du gouvernement
-        piv_cac_info: Utilisez votre carte PIV / CAC pour sécuriser votre compte.
+        piv_cac_info: Utilisez votre carte PIV / CAC pour sécuriser votre compte
         sms: SMS
         sms_info: Obtenez votre code de sécurité par SMS
         voice: Appel téléphonique
-        voice_info: Obtenez votre code de sécurité par appel téléphonique.
+        voice_info: Obtenez votre code de sécurité par appel téléphonique
