--- a/config/locales/links/fr.yml
+++ b/config/locales/links/fr.yml
@@ -1,7 +1,7 @@
 ---
 fr:
   links:
-    access_help: Protégez vos données.
+    access_help: Comment login.gov protège vos données.
     account:
       reactivate:
         with_key: J'ai ma clé
