LG-598 LG-600 List/delete webauthn configurations for a user
**Why**: So we can support strong authentication via hardware security keys as a new 2FA option

**How**: Update the accounts page to list a user's webauthn configurations. Add new styling.

--- a/config/locales/account/en.yml
+++ b/config/locales/account/en.yml
@@ -26,6 +26,8 @@ en:
         reactivate_button: Enter the code you received via US mail
         success: Your account has been verified.
       webauthn: Hardware security key
+      webauthn_add: "+ Add hardware security key"
+      webauthn_delete: Delete
     items:
       delete_your_account: Delete your account
       personal_key: Personal key
