--- a/config/locales/notices/es.yml
+++ b/config/locales/notices/es.yml
@@ -46,5 +46,6 @@ es:
       link: use un email diferente
       text_html: O %{link}
     webauthn_added: Agregaste una clave de seguridad de hardware.
+    webauthn_deleted: Has eliminado una clave de seguridad de hardware.
   session_timedout: Hemos terminado su sesión. Para su seguridad, %{app} cierra su
     sesión cuando usted no pasa a una nueva página durante %{minutes} minutos.
