update spanish help link

--- a/config/locales/links/es.yml
+++ b/config/locales/links/es.yml
@@ -1,7 +1,7 @@
 ---
 es:
   links:
-    access_help: Protege tus datos.
+    access_help: Cómo login.gov protege sus datos.
     account:
       reactivate:
         with_key: Tengo mi clave
