--- a/config/locales/account/en.yml
+++ b/config/locales/account/en.yml
@@ -27,7 +27,7 @@ en:
         success: Your account has been verified.
       webauthn: Hardware security key
       webauthn_add: "+ Add hardware security key"
-      webauthn_delete: Delete
+      webauthn_delete: Remove
     items:
       delete_your_account: Delete your account
       personal_key: Personal key
