--- a/config/locales/account/fr.yml
+++ b/config/locales/account/fr.yml
@@ -29,7 +29,7 @@ fr:
         success: Votre compte a été vérifié.
       webauthn: Clé de sécurité matérielle
       webauthn_add: "+ Ajouter une clé de sécurité matérielle"
-      webauthn_delete: Effacer
+      webauthn_delete: Retirer
     items:
       delete_your_account: Supprimer votre compte
       personal_key: Clé personnelle
