--- a/config/locales/errors/fr.yml
+++ b/config/locales/errors/fr.yml
@@ -49,6 +49,7 @@ fr:
       usps_otp_expired: NOT TRANSLATED YET
       weak_password: Votre mot de passe n'est pas assez fort. %{feedback}
     webauthn_setup:
+      delete_last: Désolé, vous ne pouvez pas supprimer votre dernière option MFA
       general_error: Une erreur s'est produite lors de l'ajout de votre clé de sécurité
         matérielle. Veuillez réessayer.
       unique_name: Ce nom est déjà pris. Veuillez choisir un autre nom.
