LG-599 LG-603 Allow user to config webauthn at account creation. Allow user to use webauthn for 2FA.
Why: So we can support strong authentication via hardware security keys as a new 2FA option

How: Generate a challenge on the server side and present the browser with a list of credentials that are registered to the user. Use the Credential Manager API (navigator.credentials.get) to ask the browser to sign the challenge if the authenticator contains one of the given credentials and the user gives consent.  The web page then automatically submits the form with the signed assertion for the server to verify. Use the webauthn gem to verify the assertion response. Upon success the user is authenticated.

--- a/config/locales/devise/es.yml
+++ b/config/locales/devise/es.yml
@@ -135,3 +135,6 @@ es:
         sms_info: Obtenga su código de seguridad a través de mensajes de texto / SMS
         voice: Llamada telefónica
         voice_info: Obtenga su código de seguridad a través de una llamada telefónica
+        webauthn: Clave de seguridad de hardware
+        webauthn_info: Use una clave de seguridad de hardware para proteger su cuenta
+      webauthn_header_text: Presente su clave de seguridad de hardware
