--- a/config/locales/devise/en.yml
+++ b/config/locales/devise/en.yml
@@ -136,3 +136,6 @@ en:
         sms_info: Get your security code via text message / SMS
         voice: Phone call
         voice_info: Get your security code via phone call
+        webauthn: Hardware security key
+        webauthn_info: Use a hardware security key to secure your account
+      webauthn_header_text: Present your hardware security key
