--- a/config/locales/devise/fr.yml
+++ b/config/locales/devise/fr.yml
@@ -144,3 +144,7 @@ fr:
         sms_info: Obtenez votre code de sécurité par SMS
         voice: Appel téléphonique
         voice_info: Obtenez votre code de sécurité par appel téléphonique
+        webauthn: Clé de sécurité matérielle
+        webauthn_info: Utilisez une clé de sécurité matérielle pour sécuriser votre
+          compte
+      webauthn_header_text: Présentez votre clé de sécurité matérielle
