--- a/config/locales/titles/en.yml
+++ b/config/locales/titles/en.yml
@@ -36,6 +36,7 @@ en:
         invalid: PIV/CAC certificate error
         missing: Internal error
     present_piv_cac: Present your PIV/CAC
+    present_webauthn: Present your hardware security key
     reactivate_account: Reactivate your account
     registrations:
       new: Sign up for a account
