--- a/config/locales/two_factor_authentication/en.yml
+++ b/config/locales/two_factor_authentication/en.yml
@@ -15,6 +15,8 @@ en:
       sms_info: Get security code via text message.
       voice: Automated phone call
       voice_info: Get security code via phone call (North America phone numbers only).
+      webauthn: Hardware security key
+      webauthn_info: Use your hardware security key instead of a security code.
     login_options_link_text: Choose another security option
     login_options_title: Select your security option
     personal_key_fallback:
@@ -25,3 +27,5 @@ en:
       question: Don't have your piv/cac card available?
     totp_fallback:
       question: Don't have your authenticator app?
+    webauthn_fallback:
+      question: Don't have your hardware security key available?
