LG-627 Don't automatically select SMS during IdV
**Why**: When a user uses a different number for address verification
than the one they used for 2FA they are asked to choose if they'd like
to get the code sent to them via text message or voice message. Text
message is auto-selected but it should default to no selection so users
don't think text message is the only option or that it's automatically
compatible with their phone.

--- a/config/locales/idv/en.yml
+++ b/config/locales/idv/en.yml
@@ -32,6 +32,7 @@ en:
         zipcode: 'Your zipcode must be entered in as #####-####'
       unsupported_jurisdiction: Sorry, we can't verify people from this state.
       unsupported_jurisdiction_sp: Please visit %{sp_name} to access your account.
+      unsupported_otp_delivery_method: Please select a valid delivery method.
     failure:
       attempts:
         one: You have <strong>1 attempt remaining.</strong>
