--- a/config/locales/idv/fr.yml
+++ b/config/locales/idv/fr.yml
@@ -36,6 +36,7 @@ fr:
         de cet état.
       unsupported_jurisdiction_sp: Veuillez visiter %{sp_name} pour accéder à votre
         compte.
+      unsupported_otp_delivery_method: NOT TRANSLATED YET
     failure:
       attempts:
         one: Il ne vous reste qu' strongune tentative./strong
