Update webauthn setup to match master branch
**Why**: PR #2501 was not rebased against master, and caused specs to
fail on master and on other branches based on master.

**How**:
- Update webauthn setup controller to use the new personal key
policy object and fix the logic so that LOA3 users don't see the
personal key before the IdV flow.
- Update French translations

--- a/config/locales/forms/fr.yml
+++ b/config/locales/forms/fr.yml
@@ -90,7 +90,7 @@ fr:
       title: Confirmez votre compte
     webauthn_setup:
       intro_html: Lorsque vous vous connectez, vous pouvez utiliser votre clé de sécurité
-        matérielle. %{link}
+        physique. %{link}
       step_1: Insérez votre clé de sécurité dans le port USB de votre ordinateur ou
         connectez-le avec un câble USB.
       step_2: Une fois connecté, appuyez sur le bouton ou le disque d'or si votre
