--- a/config/locales/account/fr.yml
+++ b/config/locales/account/fr.yml
@@ -27,8 +27,8 @@ fr:
         instructions: Votre compte requiert la vérification d'un code secret.
         reactivate_button: Entrez le code que vous avez reçu par la poste
         success: Votre compte a été vérifié.
-      webauthn: Clé de sécurité matérielle
-      webauthn_add: "+ Ajouter une clé de sécurité matérielle"
+      webauthn: Clé de sécurité physique
+      webauthn_add: "+ Ajouter une clé de sécurité physique"
       webauthn_delete: Retirer
     items:
       delete_your_account: Supprimer votre compte
