--- a/config/locales/errors/fr.yml
+++ b/config/locales/errors/fr.yml
@@ -51,5 +51,5 @@ fr:
     webauthn_setup:
       delete_last: Désolé, vous ne pouvez pas supprimer votre dernière option MFA
       general_error: Une erreur s'est produite lors de l'ajout de votre clé de sécurité
-        matérielle. Veuillez réessayer.
+        physique. Veuillez réessayer.
       unique_name: Ce nom est déjà pris. Veuillez choisir un autre nom.
