--- a/config/locales/links/fr.yml
+++ b/config/locales/links/fr.yml
@@ -26,4 +26,4 @@ fr:
       app_option: Utilisez une application d'authentification à la place.
       get_another_code: Obtenir un autre code
     what_is_totp: Qu'est-ce qu'une application d'authentification?
-    what_is_webauthn: Qu'est-ce qu'une clé de sécurité matérielle?
+    what_is_webauthn: Qu'est-ce qu'une clé de sécurité physique?
