--- a/config/locales/notices/fr.yml
+++ b/config/locales/notices/fr.yml
@@ -47,8 +47,8 @@ fr:
     use_diff_email:
       link: utilisez une adresse courriel différente
       text_html: Or, %{link}
-    webauthn_added: Vous avez ajouté une clé de sécurité matérielle.
-    webauthn_deleted: Vous avez supprimé une clé de sécurité matérielle.
+    webauthn_added: Vous avez ajouté une clé de sécurité physique.
+    webauthn_deleted: Vous avez supprimé une clé de sécurité physique.
   session_timedout: Nous vous avons déconnecté. Pour votre sécurité, %{app} désactive
     votre session lorsque vous demeurez sur une page sans vous déplacer pendant %{minutes}
     minutes.
