--- a/config/locales/links/en.yml
+++ b/config/locales/links/en.yml
@@ -14,6 +14,7 @@ en:
     create_account: Create account
     go_back: Go back
     help: Help
+    my_account: my account
     next: Next
     passwords:
       forgot: Forgot your password?
