--- a/config/locales/links/es.yml
+++ b/config/locales/links/es.yml
@@ -14,6 +14,7 @@ es:
     create_account: Crear cuenta
     go_back: Regresa
     help: Ayuda
+    my_account: mi cuenta
     next: Siguiente
     passwords:
       forgot: "¿Olvidó su contraseña?"
