--- a/config/locales/links/fr.yml
+++ b/config/locales/links/fr.yml
@@ -14,6 +14,7 @@ fr:
     create_account: Créer un compte
     go_back: Retourner
     help: Aide
+    my_account: mon compte
     next: Suivant
     passwords:
       forgot: Vous avez oublié votre mot de passe?
