LG-677 Add confirm screen on account reset cancel
**Why**: Some phones will visit the SMS link to retrieve a thumbnail and this triggers a cancel.

**How**: Add a confirm screen and have it call the old logic via a post request.  Prevent token leakage by placing a valid token in session.

--- a/config/locales/account_reset/es.yml
+++ b/config/locales/account_reset/es.yml
@@ -1,6 +1,11 @@
 ---
 es:
   account_reset:
+    cancel_request:
+      are_you_sure: "¿Seguro que quieres cancelar tu solicitud de eliminación de cuenta?"
+      cancel: Salida
+      cancel_button: Cancelar la cuenta eliminada
+      title: Cancelar la cuenta eliminada
     confirm_delete_account:
       cta: Puede %{link} o cierra esta ventana si ya terminaste.
       info: La cuenta para <strong>%{email}</strong> ha sido eliminada. Nosotros enviamos
