--- a/config/locales/account_reset/en.yml
+++ b/config/locales/account_reset/en.yml
@@ -1,6 +1,11 @@
 ---
 en:
   account_reset:
+    cancel_request:
+      are_you_sure: Are you sure you want to cancel your delete account request?
+      cancel: Exit
+      cancel_button: Cancel delete account
+      title: Cancel delete account
     confirm_delete_account:
       cta: You may %{link} or close this window if you're done.
       info: The account for <strong>%{email}</strong> has been deleted. We sent an
