--- a/config/locales/idv/es.yml
+++ b/config/locales/idv/es.yml
@@ -31,6 +31,7 @@ es:
       unsupported_jurisdiction: Lo sentimos, no podemos verificar personas de este
         estado.
       unsupported_jurisdiction_sp: Visita %{sp_name} para acceder a tu cuenta.
+      unsupported_otp_delivery_method: Seleccione una manera de recibir un código.
     failure:
       attempts:
         one: Tiene usted <strong> 1 intento restante.</ strong>
