LG-615 Update personal key page design and language
**Why**: To emphasize that we will never ask the user to 'verify' the key, and it will only be used in the account recovery flow.

**How**: Update the HTML, CSS, and language.  Add new images.

--- a/config/locales/headings/en.yml
+++ b/config/locales/headings/en.yml
@@ -30,7 +30,7 @@ en:
       change: Change your password
       confirm: Confirm your current password to continue
       forgot: Forgot your password?
-    personal_key: Store your personal key
+    personal_key: Always have access to your account with your personal key
     piv_cac_setup:
       certificate:
         bad: The certificate you selected is invalid.
