--- a/config/locales/instructions/en.yml
+++ b/config/locales/instructions/en.yml
@@ -56,6 +56,11 @@ en:
         intro: 'Password strength: '
         iv: Good
         v: Great!
-    personal_key_accent: Write it down or print it out.
-    personal_key_html: This is the only way to regain access to your account if you
-      lose the phone where we send your security code. %{accent}
+    personal_key:
+      accent: Write it down or print it out.
+      info_html: This is the only way to regain access to your account if you lose
+        your phone or security options. %{accent}
+      once_html: "<strong>Personal keys are one-time use.</strong> If you need to
+        use your personal key for any reason, you'll be issued a new key."
+      safety_html: "<strong>Keep it private and safe.</strong> Don't share your personal
+        key, and only use it when you do not have access to your normal sign-in methods."
