--- a/config/locales/instructions/fr.yml
+++ b/config/locales/instructions/fr.yml
@@ -61,7 +61,13 @@ fr:
         intro: 'Force du mot de passe : '
         iv: Bonne
         v: Excellente!
-    personal_key_accent: Notez-la ou imprimez-la.
-    personal_key_html: Il s'agit de la seule façon de récupérer l'accès à votre compte
-      si vous perdez le téléphone sur lequel nous envoyons votre code de sécurité.
-      %{accent}
+    personal_key:
+      accent: Notez-la ou imprimez-la.
+      info_html: C'est le seul moyen de retrouver l'accès à votre compte si vous perdez
+        votre téléphone ou vos options de sécurité. %{accent}
+      once_html: "<strong>Les clés personnelles sont à usage unique.</strong> Si vous
+        devez utiliser votre clé personnelle pour quelque raison que ce soit, vous
+        recevrez une nouvelle clé."
+      safety_html: "<strong>Protégez-vous en privé.</strong> Ne partagez pas votre
+        clé personnelle et ne l'utilisez que lorsque vous n'avez pas accès à vos méthodes
+        de connexion habituelles."
