Update capybara-screenshot to point to rubygems
**Why**: To have the most stable version. I was working on another PR
and I started having bundler issues due to capybara-screenshot.

Note that by updating capybara-screenshot, capybara was also updated
to 3.7.2, which is good because we were quite behind at 2.17.0.
Version 3 changes the way text is matched. It no longer normalizes
whitespace and returns text as close as possible to "as rendered", which
allows us to find bugs such as extra spaces in our localizations.

Version 3 also uses puma by default, so I added the gem.

More upgrade details here:
https://github.com/teamcapybara/capybara/blob/master/UPGRADING.md

--- a/config/locales/account_reset/en.yml
+++ b/config/locales/account_reset/en.yml
@@ -2,9 +2,9 @@
 en:
   account_reset:
     confirm_delete_account:
+      cta: You may %{link} or close this window if you're done.
       info: The account for <strong>%{email}</strong> has been deleted. We sent an
-        email confirmation of the account deletion. <br><br> You may %{link} or close
-        this window if you're done.
+        email confirmation of the account deletion.
       link_text: create a new account
       title: You have deleted your account
     confirm_request:
@@ -20,7 +20,7 @@ en:
       delete_button: Delete account
       info: Deleting your account should be your last resort if you are locked out
         of your account. You will not be able to recover any information linked to
-        your account.  Once your account is deleted, you can create a new one using
+        your account. Once your account is deleted, you can create a new one using
         the same email address.
       title: Deleting your account should be your last resort
     request:
