--- a/config/locales/account_reset/fr.yml
+++ b/config/locales/account_reset/fr.yml
@@ -2,9 +2,9 @@
 fr:
   account_reset:
     confirm_delete_account:
+      cta: Vous pouvez %{link} ou fermer cette fenêtre si vous avez terminé.
       info: Le compte pour <strong>%{email}</strong> a été supprimé. Nous avons envoyé
-        un email de confirmation de la suppression du compte. <br> <br> Vous pouvez
-        %{link} ou fermer cette fenêtre si vous avez terminé.
+        un email de confirmation de la suppression du compte.
       link_text: créer un nouveau compte
       title: Vous avez supprimé votre compte
     confirm_request:
