LG-624 Add HOMES.mil logo and help text in INT
**Why**: For HOMES.mil integration testing

**How**: Update the help text hooks for the new service provider friendly names. Update the locale files

--- a/config/locales/service_providers/en.yml
+++ b/config/locales/service_providers/en.yml
@@ -1,6 +1,17 @@
 ---
 en:
   service_providers:
+    homes_mil:
+      account_page:
+        body: Your old HOMES.mil username and password won’t work. Please create a
+          login.gov account using the same email address you use for HOMES.mil.
+      body_html: Your old HOMES.mil username and password won’t work. Please %{link}
+        using the same email address you use for HOMES.mil.
+      create_account_link: create a login.gov account
+      create_account_page:
+        body: Please create a login.gov account using the same email address you use
+          for HOMES.mil
+      header: First time here from HOMES.mil?
     learn_more: Learn more.
     sam:
       account_page:
