--- a/config/locales/service_providers/es.yml
+++ b/config/locales/service_providers/es.yml
@@ -1,6 +1,18 @@
 ---
 es:
   service_providers:
+    homes_mil:
+      account_page:
+        body: Si tiene un perfil de HOMES.mil existente, favor de usar la dirección
+          de correo electrónico primaria o secundaria que usó para HOMES.mil para
+          crear su nueva cuenta de login.gov.
+      body_html: Si tiene un perfil de HOMES.mil existente, favor de usar la dirección
+        de correo electrónico primaria o secundaria que usó para HOMES.mil para %{link}.
+      create_account_link: crear su nueva cuenta de login.gov
+      create_account_page:
+        body: Por favor crea un login.gov cuenta usando la misma dirección de correo
+          electrónico que utiliza para HOMES.mil.
+      header: "¿Ha venido de HOMES.mil?"
     learn_more: Obtenga más información.
     sam:
       account_page:
