--- a/config/locales/service_providers/fr.yml
+++ b/config/locales/service_providers/fr.yml
@@ -1,6 +1,19 @@
 ---
 fr:
   service_providers:
+    homes_mil:
+      account_page:
+        body: Si vous avez déjà un profil HOMES.mil, veuillez utiliser l'adresse e-mail
+          principale ou secondaire que vous avez utilisée pour HOMES.mil pour créer
+          votre nouveau compte login.gov.
+      body_html: Si vous avez déjà un profil HOMES.mil, veuillez utiliser l'adresse
+        e-mail principale ou secondaire que vous avez utilisée pour HOMES.mil pour
+        %{link}.
+      create_account_link: créer votre nouveau compte login.gov
+      create_account_page:
+        body: Veuillez créer un compte login.gov avec la même adresse e-mail que vous
+          avez utilisée pour HOMES.mil.
+      header: Êtes-vous venu(e) de HOMES.mil?
     learn_more: En savoir plus.
     sam:
       account_page:
