LG-637 Set max length of state id number to 25 (#2530)
**Why**: Because according to AAMVA this is the longest a state id
number can be, and they perform this validation on the requests that we
send to them.

--- a/config/locales/idv/fr.yml
+++ b/config/locales/idv/fr.yml
@@ -30,6 +30,7 @@ fr:
           exemple : ABC1-DEF2-G3HI-J456'
         ssn: 'Votre numéro de sécurité sociale doit être inscrit de cette façon :
           ###-##-####'
+        state_id_number: Votre numéro d'identification ne peut excéder 25 caractères
         zipcode: 'Votre code ZIP doit être inscrit de cette façon : #####-####'
       unsupported_jurisdiction: Désolé, nous ne pouvons pas vérifier les personnes
         de cet état.
