--- a/config/locales/notices/es.yml
+++ b/config/locales/notices/es.yml
@@ -20,8 +20,8 @@ es:
       success: Enviamos otro email de confirmación.
     session_cleared: Para su seguridad, borramos lo que ingresó si no pasa a una página
       nueva dentro de %{minutes} minutos.
-    session_timedout: Hemos terminado su sesión. Para su seguridad, %{app} cierra su
-      sesión cuando usted no pasa a una nueva página durante %{minutes} minutos.
+    session_timedout: Hemos terminado su sesión. Para su seguridad, %{app} cierra
+      su sesión cuando usted no pasa a una nueva página durante %{minutes} minutos.
     signed_up_but_unconfirmed:
       first_paragraph_end: con un enlace para confirmar su email. Siga el enlace para
         continuar creando su cuenta.
