LG-711 Stop asking for webauthn attestation and catch errors (#2564)
**Why**: Attestation is not needed and we need to catch errors where an unsupported format is detected by AuthenticatorAttestationResponse#valid

**How**: Set the attestation to 'none' for the navigator.credentials.create options hash in the javascript.  Place a rescue block around the valid? call to the gem/object on the server side.

--- a/config/locales/errors/en.yml
+++ b/config/locales/errors/en.yml
@@ -52,6 +52,9 @@ en:
         letter for a new code.
       weak_password: Your password is not strong enough. %{feedback}
     webauthn_setup:
+      attestation_error: Sorry, but your security key doesn't appear to be a FIDO
+        security key.  Please make sure your device is listed at https://fidoalliance.org/certification/fido-certified-products/
+        and if you believe the error is ours, please contact us at hello@login.gov.
       delete_last: Sorry, you can not remove your last MFA option.
       general_error: There was an error adding your hardware security key. Please
         try again.
