LG-612 Add helper text to ID number field (#2536)
* add helper text to drivers license field

* add french and spanish translations to DL tip

* corrects a bad merge

* removes whitespace and adds space

--- a/config/locales/idv/fr.yml
+++ b/config/locales/idv/fr.yml
@@ -84,6 +84,7 @@ fr:
       ssn_label_html: Numéro de sécurité sociale
       state: État
       state_id: Numéro d'identification
+      state_id_tip: sans espaces ou tirets
       state_id_type:
         drivers_license: NOT TRANSLATED YET
         drivers_permit: NOT TRANSLATED YET
